@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.9  Last change: 2017 Jul 20
+*vifm-app.txt*    For Vifm version 0.9  Last change: 2017 Jul 26
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -1675,6 +1675,7 @@ Available style values (some of them can be combined):
 Available group-name values:
  - Win - color of all windows (views, dialogs, menus) and default color for
          their content (e.g. regular files in views)
+ - AuxWin - color of auxiliary areas of windows
  - Border - color of vertical parts of the border
  - TopLineSel - top line color of the current pane
  - TopLine - top line color of the other pane
@@ -1832,17 +1833,18 @@ transparency:
   CmdLine
     ErrorMsg
   Win
-    File name specific highlights
-      Directory
-      Link
-      BrokenLink
-      Socket
-      Device
-      Fifo
-      Executable
-        Selected
-          CurrLine
-          OtherLine
+    AuxWin
+      File name specific highlights
+        Directory
+        Link
+        BrokenLink
+        Socket
+        Device
+        Fifo
+        Executable
+          Selected
+            CurrLine
+            OtherLine
   TopLine
     TopLineSel
 
@@ -4764,8 +4766,8 @@ this way:
    - Border, TopLineSel, TopLine, CmdLine, ErrorMsg, StatusLine, JobLine,
      SuggestBox and WildMenu are always determined by the primary color scheme
    - CurrLine, Selected, Directory, Link, BrokenLink, Socket, Device,
-     Executable, Fifo and Win are determined by primary color scheme and a set
-     of local color schemes, which can be empty
+     Executable, Fifo, CmpMismatch, Win and AuxWin are determined by primary
+     color scheme and a set of local color schemes, which can be empty
 
 There might be a set of local color schemes because they are structured
 hierarchically according to file system structure. For example, having the
