@@ -69,6 +69,7 @@ char *HI_GROUPS[] = {
 	[JOB_LINE_COLOR]     = "JobLine",
 	[SUGGEST_BOX_COLOR]  = "SuggestBox",
 	[MISMATCH_COLOR]     = "CmpMismatch",
+	[AUX_WIN_COLOR]      = "AuxWin",
 };
 ARRAY_GUARD(HI_GROUPS, MAXNUM_COLOR);
 
@@ -94,6 +95,7 @@ const char *HI_GROUPS_DESCR[] = {
 	[JOB_LINE_COLOR]     = "job bar",
 	[SUGGEST_BOX_COLOR]  = "suggestion box",
 	[MISMATCH_COLOR]     = "mismatched diff entries",
+	[AUX_WIN_COLOR]      = "auxiliary part of window",
 };
 ARRAY_GUARD(HI_GROUPS_DESCR, ARRAY_LEN(HI_GROUPS));
 
@@ -391,6 +393,7 @@ static const col_attr_t default_cs[] = {
 	[JOB_LINE_COLOR]     = { COLOR_BLACK,   COLOR_WHITE, A_BOLD | A_REVERSE      },
 	[SUGGEST_BOX_COLOR]  = { -1,            -1,          A_BOLD                  },
 	[MISMATCH_COLOR]     = { COLOR_WHITE,   COLOR_RED,   A_BOLD                  },
+	[AUX_WIN_COLOR]      = { -1,            -1,          -1                      },
 };
 ARRAY_GUARD(default_cs, MAXNUM_COLOR);
 
